# agent-sandbox

./: .gitignore  .mcp.json  .mise.toml  agent-sandbox.toml  go.mod  go.sum  nono-yolo.toml  nono.json  nono.jsonc  nono.toml  pyproject.toml
.claude/: settings.json  settings_yolo.json
agent-sandbox/: .gitignore  README.md  config.example.toml  main.go  main_test.go
agent-sandbox/cmd/: claude.go  claude_test.go  container_runner.go  debug.go  doctor.go  doctor_test.go  exec.go  exec_test.go  generate.go  hook.go  hook_test.go  init.go  init_test.go  install_hook.go  install_hook_test.go  nono_config.go  nono_config_test.go  root.go  safe.go  safe_docker_compose.go  safe_docker_compose_test.go  sandbox.go  sandbox_down.go  sandbox_lifecycle_test.go  sandbox_prune.go  sandbox_up.go  serve.go
agent-sandbox/internal/agentconfig/: agentconfig.go  agentconfig_test.go
agent-sandbox/internal/command/: command.go  command_test.go
agent-sandbox/internal/commandrouter/: command.go  command_test.go  commandrouter.go  commandrouter_test.go  engine.go  engine_test.go  env_internal_test.go  host.go  host_process_other.go  host_process_unix.go  host_test.go  pipeline_test.go  router.go  router_errors.go  router_test.go
agent-sandbox/internal/config/: config.go  config_test.go  errors.go
agent-sandbox/internal/container/: container.go  container_integration_test.go  container_internal_test.go  host.go  host_process_other.go  host_process_unix.go  host_test.go  sandbox.go  (+4 more)
docker/sandbox/: Dockerfile
e2e/: conftest.py  mcp_client.py  test_mcp_docker.py  test_mcp_stdio.py
(+73 files in other folders)
