[project]
name = "agent-sandbox"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pytest>=9.0.3",
  "specify-cli @ git+https://github.com/github/spec-kit.git@v0.8.4",
]

[tool.pytest.ini_options]
markers = [
  "docker: tests that require Docker daemon and sandbox startup",
]
